--- a/site.css
+++ b/site.css
@@ -177,4 +177,10 @@ footer {
     color: white;
     font-size: 0.8em;
     padding: 5px;
+    text-decoration: none;
+    
+}
+footer a:hover {
+    text-decoration: underline;
+    color: var(--cor3);
 }
