--- a/site.css
+++ b/site.css
@@ -178,11 +178,11 @@ footer {
     font-size: 0.8em;
     padding: 5px;
     text-decoration: none;
-    
 }
 footer a {
     text-decoration: none;
     color: white;
+    font-weight: bold;
 }
 footer a:hover {
     text-decoration: underline;
